[package]
name = "one_tower"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.12.1"}
leafwing-input-manager = "0.11.2"
bevy_egui = { git = "https://github.com/mvlabat/bevy_egui" }
random-number = "0.1.8"
bevy_mod_picking = { version = "0.17.0", features = [] }
bevy_xpbd_3d = { git = "https://github.com/Jondolf/bevy_xpbd", branch = "main" }
egui = "0.23.0"